# coe379l

./: README.md
Project/: CMakeLists.txt  matmul.cu
hw1/: CMakeLists.txt  hw1.cxx
hw10/: CMakeLists.txt  threadIdx.cu
hw11/: CMakeLists.txt  addvector.cu
hw13/: CMakeLists.txt  matvec.c
hw2/: CMakeLists.txt  randommax.cxx
hw3/: CMakeLists.txt  scangather.cxx
hw4/: CMakeLists.txt  isendirecvarray.cxx
hw5/: CMakeLists.txt  stridescatter.cxx
hw6/: CMakeLists.txt  results  transpose.cxx
hw7/: CMakeLists.txt  vectorsum.c
hw8/: CMakeLists.txt  reductcoordinate.c
hw9/: CMakeLists.txt  sudoku.c
jordan/: CMakeLists.txt  jordan.cxx
